--- a/занятие 7/belikov_lox.html
+++ b/занятие 7/belikov_lox.html
@@ -21,13 +21,15 @@
             transition: 12s;
 
         }
+       
     </style>
 </head>
 <body>
     <div id="ussr">Привет Андрей!</div>
     <br>
     <div id="usa">ЗА СССР</div>
-    <div id="">ЗА УКРАИНУ</div>
+    <p> Тополиный пух,
+        Данил петух </p>
 
 
 
